# HydroOpt

./: .gitignore  build.sh  diagnostico_pressoes.py  exemplo_convergencia_graficos.py  exemplo_nos_tubos.py  exemplo_uso.py  exemplo_variador_parametros.py  pyproject.toml  setup.py  temp.inp  temp.rpt  teste_gwo.py  teste_gwo_v2.py  teste_penalidade.py  teste_rapido.py  teste_variador_parametros.py
.github/workflows/: publish.yml
HydroOpt/: __init__.py  analisador_estatistico.py  core.py  diametros.py  otimizador.py  visualizador_convergencia.py
hydroopt.egg-info/: PKG-INFO  SOURCES.txt
saidas/: visualizador_npz.py  wdn_full_benchmark.py
