[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroopt"
version = "0.0.1"
authors = [
    {name = "Gladistony Silva Lins", email = "seu-email@exemplo.com"}
]
description = "Pacote de teste de publicação"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Gladistony/HydroOpt"
"Bug Tracker" = "https://github.com/Gladistony/HydroOpt/issues"
